# firstlab

./: .gitignore  CMakeLists.txt  README.md  main.c  tests  tests.c
c/: DynamicArray.c  FieldInfo.c  List.c  UI.c
headers/: Allocator.h  DynamicArray.h  FieldInfo.h  List.h  UI.h  UsersStruct.h
